--- a/NelderMeadHomework/Homework.ipynb
+++ b/NelderMeadHomework/Homework.ipynb
@@ -411,13 +411,32 @@
     "    plt.plot(xs_best, ys_best, label=r\"$\\alpha = {}, \\gamma = {}, \\rho = {}, sigma = {}$\".format(alpha, gamma, rho, sigma))\n",
     "    plt.scatter(optimums[i][0], optimums[i][1])\n",
     "    \n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conservative-olive",
+   "metadata": {},
+   "source": [
+    "As we can see, hyperparameters do indeed affect convergence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "thrown-damage",
+   "metadata": {},
+   "source": [
+    "## Thank you for your attention!\n",
+    "\n",
+    "Here is a photo of funny wolves to brighten up your day!\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unavailable-trauma",
+   "id": "elder-affair",
    "metadata": {},
    "outputs": [],
    "source": []
