--- a/optimizers/HW_8_optimizers.ipynb
+++ b/optimizers/HW_8_optimizers.ipynb
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как мы видим, он сошелся примерно туда же, куда до этого сходились другие оптимизаторы, притом **крайне** быстро. Great Success! Насколько я понимаю, именно с неспособностью обучаться на батчах связана непопулярность L-BFGS в обучении нейросетей -- несмотря на быструю сходимость, ему необходимо работать со всем датасетом сразу, да еще и сам алгоритм потребляет много памяти, поэтому на больших датасетах его использовать не получится. При этом другие оптимизаторы позволяют добиться сходных результатов с меньшим потреблением и batch-оптимизацией."
+    "Как мы видим, он сошелся примерно туда же, куда до этого сходились другие оптимизаторы (и значения loss даже меньше, чем у остальных оптимизаторов), притом **крайне** быстро. Great Success! Насколько я понимаю, именно с неспособностью обучаться на батчах связана непопулярность L-BFGS в обучении нейросетей -- несмотря на быструю сходимость, ему необходимо работать со всем датасетом сразу, да еще и сам алгоритм потребляет много памяти, поэтому на больших датасетах его использовать не получится. При этом другие оптимизаторы позволяют добиться сходных результатов с меньшим потреблением и batch-оптимизацией."
    ]
   },
   {
